index text content updated and added to text.txt

--- a/InstructorResources/index.html
+++ b/InstructorResources/index.html
@@ -21,29 +21,28 @@
         <h2>Author: Antony Worrall Thompson</h2>
         <h3><a href="http://www.bbc.co.uk/food/recipes/chocolatechipcookies_72335" target="_blank">See original recipe</a></h3>
         <h5>Less than 30 mins preparation time</h5>
-        <h5>10-30 min cooktime</h5>
         <h5>Makes 12-15 servings</h5>
       </aside>
     </div>
     <h2>Ingredients</h2>
     <ul>
-      <li>350g/12¼oz unsifted flour</li>
+      <li>350g unsifted flour</li>
       <li>1 tsp bicarbonate of soda</li>
       <li>1 tsp salt</li>
-      <li>225g/8oz butter</li>
-      <li>175g/6¼oz caster sugar</li>
-      <li>175g/6¼oz soft brown sugar</li>
+      <li>225g butter</li>
+      <li>175g caster sugar</li>
+      <li>175g soft brown sugar</li>
       <li>1 tsp vanilla extract</li>
       <li>2 eggs</li>
-      <li>350g/12¼oz dark chocolate, crumbled</li>
+      <li>350g dark chocolate, crumbled</li>
     </ul>
     <h2>Preparation</h2>
     <ol>
-      <li>Preheat the oven to 190C/375F/Gas 5.</li>
+      <li>Preheat the oven to 190C/Gas 5</li>
       <li>In a bowl, combine the flour, baking soda and salt.</li>
       <li>In another bowl, combine the butter, sugar, brown sugar and vanilla extract until creamy. Beat in the eggs. Gradually beat in the flour mixture. Stir in the chocolate.</li>
       <li>Split the pliable dough into two halves, rolling each out into sausage shapes, approximately 5cm/2in in diameter. Wrap them in cling film and transfer to the refrigerator until ready to use.</li>
-      <li>When you are ready to bake the cookies, simply cut the log into slices 2cm/¾in thick and lay on a baking tray, widely spaced apart. Bake for 9-11 minutes.</li>
+      <li>When you are ready to bake the cookies, simply cut the log into slices 2cm thick and lay on a baking tray, widely spaced apart. Bake for 9-11 minutes.</li>
       <li>Serve.</li>
     </ol>
   </section>
