--- a/InstructorResources/index.html
+++ b/InstructorResources/index.html
@@ -46,6 +46,7 @@
       <li>Serve.</li>
     </ol>
   </section>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 </html>
